--- a/.gitignore
+++ b/.gitignore
@@ -345,6 +345,7 @@ __pycache__/
 
 # OpenCover UI analysis results
 OpenCover/
+coverage/
 
 # Azure Stream Analytics local run output
 ASALocalRun/
